--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/coração.png" />
+    <link rel="icon" type="image/svg+xml" href="/heart.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Para a Ti Mo</title>
-  </head>
-  <body>
-    <div id="root"></div>
+    <title>Nossa História</title>e>
+    <meta name="description" content="Nossa história de amor e momentos especiais" />
+    <meta property="og:title" content="Nossa História" />
+    <meta property="og:description" content="Nossa história de amor e momentos especiais" />  <body>
+
+
+
+
+  </head>    <meta property="og:type" content="website" />    <meta property="og:image" content="/logo.png" />    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
